--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -4,6 +4,10 @@
 ** Github-hosted repositories
  - Org document (and [[github:github/markup#markups][a number of other formats]] as well) will be rendered as HTML (not without gotchas, though), using [[github:github/markup][GitHub Markup library]].
  - Commits and pull requests that include prose documents have the ability to represent those documents with source and rendered views, see [[https://help.github.com/articles/rendering-differences-in-prose-documents/][Rendering differences in prose documents]].
+* TODO What to read
+- [[http://www.bookshelf.jp/texi/org/org.html][The Org Manual @ bookshelf.jp]]
+- [[http://home.fnal.gov/~neilsen/notebook/orgExamples/org-examples.html][Emacs org-mode examples and cookbook]] by Eric H. Neilsen, Jr.
+- [[http://www.howardism.org/Technical/Emacs/literate-devops.html][Literate DevOps]] by [[http://www.howardabrams.com/][Howard Abrams]]
 * Customization
 Emacs provides a convenient way to browse, change and save settings via =M-x customize=. By default, it saves these settings to an initialization file, =~/.emacs.d/init.el=. To keep initialization file clean and simple, customizations must go to a separate file:
 #+BEGIN_SRC emacs-lisp
