--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -1236,6 +1236,14 @@ Navigate and edit LISP code with [[github:abo-abo/lispy][Oleh Krehel's lispy]] p
   (add-hook 'emacs-lisp-mode-hook '(lambda () (lispy-mode 1)))
 #+END_SRC
 ** TODO Missing dependency lispy -> swiper 		     :bug:dependency:
+* Prolog
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle prolog-el :type apt-get :pkgname "prolog-el")
+#+END_SRC
+** Org
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle ob-prolog :depends prolog-el :type github :pkgname "ljos/ob-prolog")
+#+END_SRC
 * Commands, frequency of use
 Originally [[http://ergoemacs.org/emacs/command-frequency.html][Emacs's Command Frequency Statistics]] by Xah Lee, had been replaced with [[github:dacap/keyfreq]]:
 #+BEGIN_SRC emacs-lisp
