--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -70,6 +70,12 @@ When trying out new packages, its easy to lose track of direct and indirect depe
 #+BEGIN_SRC emacs-lisp :tangle no
   (el-get-cleanup (mapcar 'el-get-source-name el-get-sources))
 #+END_SRC
+** Hunt down errors in init files
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle seq :type github :pkgname "emacsmirror/seq")
+  (el-get-bundle bug-hunter :depends (seq))
+#+END_SRC
+
 ** TODO =apt-get= package type's status is poorly supported             :bug:
 =el-get-dpkg-package-status= relies on results from =dpkg -l= which knows nothing about virtual packages. As I'm mainly using [[deb:aptitude]] for package management anyway, let use it instead of =dpkg=:
 #+BEGIN_SRC emacs-lisp
