--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -497,6 +497,31 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
 - magit-svn
 - gh
 - gitconfig
+** TODO Mercurial
+#+BEGIN_SRC emacs-lisp
+  (el-get-bundle monky :type github :pkgname "ananthakumaran/monky"
+    (with-eval-after-load-feature monky
+      (setq monky-process-type 'cmdserver)))
+#+END_SRC
+*** TODO Rebase mode for Hg a-la =git-rebase-mode=
+**** Define mode
+#+BEGIN_SRC emacs-lisp
+  (define-derived-mode mercurial-rebase-mode git-rebase-mode "Hg Rebase"
+    "")
+#+END_SRC
+**** Make only a part of the buffer read-only
+#+BEGIN_SRC emacs-lisp
+  (defun make-region-read-only (start end)
+    (interactive "*r")
+    (let ((inhibit-read-only t))
+      (put-text-property start end 'read-only t)))
+
+  (defun make-region-read-write (start end)
+    (interactive "*r")
+    (let ((inhibit-read-only t))
+      (put-text-property start end 'read-only nil)))
+#+END_SRC
+
 * Manage a list of recently opened files
 #+BEGIN_SRC emacs-lisp
   (require 'recentf)
