--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -507,8 +507,15 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
 *** TODO Rebase mode for Hg a-la =git-rebase-mode=
 **** Define mode
 #+BEGIN_SRC emacs-lisp
-  (define-derived-mode mercurial-rebase-mode git-rebase-mode "Hg Rebase"
-    "")
+  (define-derived-mode hg-histedit-mode git-rebase-mode "Hg Histedit"
+    "Major mode for editing of a Hg histedit file.
+
+  Histedit files are generated when you run 'hg histedit <commit>'.
+  They describe how Hg should edit changeset history. See the
+  documentation for histedit (e.g., by running 'hg help histedit'
+  or 'hg help -e histedit' at the command line) for details.")
+
+  (defalias 'mercurial-rebase-mode 'hg-histedit-mode)
 #+END_SRC
 **** Make only a part of the buffer read-only
 #+BEGIN_SRC emacs-lisp
