--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -516,6 +516,8 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
   or 'hg help -e histedit' at the command line) for details.")
 
   (defalias 'mercurial-rebase-mode 'hg-histedit-mode)
+
+  (add-to-list 'auto-mode-alist '("^hg-histedit-*" . hg-histedit-mode))
 #+END_SRC
 **** Make only a part of the buffer read-only
 #+BEGIN_SRC emacs-lisp
