--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -517,7 +517,7 @@ Seems there is no support for anonymous access via =https://git.eclipse.org/r/a/
 
   (defalias 'mercurial-rebase-mode 'hg-histedit-mode)
 
-  (add-to-list 'auto-mode-alist '("^hg-histedit-*" . hg-histedit-mode))
+  (add-to-list 'auto-mode-alist '("/hg-histedit-.*\\.txt\\'" . hg-histedit-mode))
 #+END_SRC
 **** Make only a part of the buffer read-only
 #+BEGIN_SRC emacs-lisp
