--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -142,11 +142,11 @@ There are two forks of original [[emacswiki:powerline.el]] (references [[github:
 * Helm
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle helm
-    (with-eval-after-load-feature (helm helm-command)
-      (setq helm-M-x-fuzzy-match t)
-      (helm-mode 1)
-      (helm-adaptive-mode 1)
-      (helm-autoresize-mode 1)))
+    (with-eval-after-load-feature (helm-command)
+      (setq helm-M-x-fuzzy-match t))
+    (helm-mode 1)
+    (helm-adaptive-mode 1)
+    (helm-autoresize-mode 1))
   (el-get-bundle helm-swoop)
 #+END_SRC
 * Changing the Location of Point
