--- a/.emacs.d/emacs.org
+++ b/.emacs.d/emacs.org
@@ -431,8 +431,8 @@ With el-get it is not possible to extend existing package's dependencies, so jus
 ** Magit
 #+BEGIN_SRC emacs-lisp
   (el-get-bundle magit
-    :checkout "2.5.0"
-    (global-set-key (kbd "C-x C-z") 'magit-status))
+    :checkout "2.5.0")
+  (global-set-key (kbd "C-x C-z") 'magit-status)
 
   (el-get-bundle magit-view-file)
 #+END_SRC
